--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font-size: 2em;
         }
         #current-shindo {
-            font-size: 5em;
+            font-size: 10em;
             font-weight: bold;
             padding: 10px 10px;
             border-radius: 16px;
@@ -96,7 +96,7 @@
     </div>
     <footer style="text-align: center; margin-top: 40px; padding: 20px; background: #f0f0f0; color: #333; font-size: 0.9em;">
         <p>© 2025 halka. </p>
-        <p>Powered by <a href="https://quake.one/sense/">QUAKE.ONE Developed by Prioris</a></p>
+        <p>Powered by <a href="https://quake.one/sense/">QUAKE.ONE</a> Developed by Prioris.</p>
     </footer>
     
 <script>
