--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div id="header">
         <div>
-            <span style="font-size:4em;">ゆれるhalkaのへや</span>
+            <span style="font-size:4em;">ゆれるhalka</span>
             <p style="font-size: 1.5em;">Goryokaku Park, Hakodate City, Hokkaido, JAPAN</p>
         </div>
         <div>
