--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <span id="date-string"></span>
             <span id="current-time"></span>
         </div>
+        <div>加速度は100Hz, 震度は1Hzですがネットワークの都合上、500msくらい遅延してると思います。</div>
     </div>
     <div id="controls">
         <input id="wsUrl" type="text" value="wss://gal.halka.jp" placeholder="WebSocket URL">
@@ -88,7 +89,7 @@
      
         <canvas id="accelChart"></canvas>
     </div>
-    <h2>リアルタイム震度</h2>
+    <h2>震度</h2>
     <div class="graph-container">
 
 
