--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span id="date-string"></span>
             <span id="current-time"></span>
         </div>
-        <div>加速度は100Hz, 震度は1Hzですがネットワークの都合上、500msくらい遅延してると思います。</div>
+        <div><p>加速度は100Hz, 震度は1Hzで出力。ハードウェアとネットワークの都合上、500msくらい遅れていると思われます。</p></div>
     </div>
     <div id="controls">
         <input id="wsUrl" type="text" value="wss://gal.halka.jp" placeholder="WebSocket URL">
