--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@ function updateShindoChart(shindo) {
                         }
                     },
                     pointBackgroundColor: [],
-                    pointRadius: 10,
-                    fill: false,
-                    tension: 0.2
+                    pointRadius: 6,
+                    fill: true,
+                    tension: 0.5
                 }]
             },
             options: {
