--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ function updateAccelChart(x, y, z) {
             data: {
                 labels: [],
                 datasets: [
-                    { label: 'X', borderColor: '#FF6384', data: [], fill: false, tension: 0.2, pointRadius: 0 },
-                    { label: 'Y', borderColor: '#4BC0C0', data: [], fill: false, tension: 0.2, pointRadius: 0 },
-                    { label: 'Z', borderColor: '#FFCE56', data: [], fill: false, tension: 0.2, pointRadius: 0 }
+                    { label: 'X', borderColor: '#FF0000', data: [], fill: false, tension: 0.2, pointRadius: 0 },
+                    { label: 'Y', borderColor: '#0000FF', data: [], fill: false, tension: 0.2, pointRadius: 0 },
+                    { label: 'Z', borderColor: '#00FF00', data: [], fill: false, tension: 0.2, pointRadius: 0 }
                 ]
             },
             options: {
@@ -247,8 +247,8 @@ function updateShindoChart(shindo) {
                         }
                     },
                     pointBackgroundColor: [],
-                    pointRadius: 2,
-                    fill: false,
+                    pointRadius: 3,
+                    fill: true,
                     tension: 0.2
                 }]
             },
