--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@ function updateShindoChart(shindo) {
                         }
                     },
                     pointBackgroundColor: [],
-                    pointRadius: 3,
-                    fill: true,
-                    tension: 0.2
+                    pointRadius: 5,
+                    fill: true
                 }]
             },
             options: {
