--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@ function updateShindoChart(shindo) {
                 },
                 scales: {
                     x: { 
-                        display: true, 
-                        title: { display: true, text: '時間' } 
+                        display: false, 
+                        title: { display: false, text: '時間' } 
                     },
                     y: { 
                         min: 0, 
-                        max: 50, 
+                        max: 10, 
                         title: { display: true, text: '震度' } 
                     }
                 }
