--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
     <div id="accel-values"></div>
 
     <div class="graph-container">
-     
-        <canvas id="accelChart"></canvas>
+     <div style="display: flex; flex-direction: column; gap: 20px;">
+    <canvas id="xAccelChart" width="400" height="200"></canvas>
+    <canvas id="yAccelChart" width="400" height="200"></canvas>
+    <canvas id="zAccelChart" width="400" height="200"></canvas>
+</div>
+        
     </div>
     <h2>震度</h2>
     <div class="graph-container">
